--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,14 @@
 /* ===== YOUR CSS GOES HERE ===== */
 /* ===== START WITH GLOBAL STYLES THEN USE MEDIA QUERIES FOR LAYOUT ADJUSTMENTS ===== */
-
 @import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@300&display=swap');
+
+article {
+
+    margin-top: auto;
+}
 body {
+    
     width: 60%;
     margin: auto;
     text-align: center;
@@ -32,48 +37,46 @@ h3 {
 }
 
 
-#flower {
-    background: url("https://i.pinimg.com/originals/47/b8/d6/47b8d65b2d9f34149689d60af5530aeb.png"
-);
+#flowerimage {
+   
 
-    background-size: cover;
-    width: 10rem;
-    height: 10rem;
+    width: 8rem;
+    height: 8rem;
     font-size: 2rem;
     display: flex;
     text-align: center;
 
 }
 
-#wheel {
-    background-image: url("https://cdn-icons-png.flaticon.com/512/6645/6645381.png");
-    background-size: cover;
-    width: 100px;
-    height: 100px;
+#wheelimage {
+    
+    width: 8rem;
+    height: 8rem;
   
-    margin: 3rem;
     font-size: 2rem;
     border: none;
 }
 
-#coin {
-    background-image: url("https://e7.pngegg.com/pngimages/16/648/png-clipart-computer-icons-coin-money-coin-trademark-logo-thumbnail.png");
-    background-size: cover;
-    width: 100px;
-    height: 100px;
+#coinimage {
+   
+    width: 8rem;
+    height: 8rem;
   
-    margin: 3rem;
     font-size: 2rem;
     border: none;
 }
 
-
+#methods {
+    display: flex;
+    justify-content: space-around;
+}
 #flower:hover span{
 display:none;
 }
 
 #flower:hover::after {
-content: "Flower of Answers";
+    filter: sepia(100%);
+    -webkit-filter: sepia(100%);    
 background-color: white;
 width: 10rem;
 }
@@ -83,7 +86,7 @@ width: 10rem;
     }
     
     #wheel:hover::after {
-    content: "Spinning Wheel";
+    
     background-color: white;
     width: 10rem;
     }
@@ -93,7 +96,6 @@ width: 10rem;
         }
         
         #coin:hover::after {
-        content: "Flipping Coin";
         background-color: white;
         }
 
@@ -115,3 +117,271 @@ display: flex;
 justify-content: center;
 align-content: center;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+  }
+  
+  body{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: lightblue;
+    
+  }
+  
+  
+  
+  .slider{
+    position: relative;
+    background: white;
+    width: 900px;
+    min-height: 500px;
+    margin: 20px;
+    overflow: hidden;
+    border-radius: 10px;
+    
+  }
+  
+  .slider .slide{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    clip-path: circle(0% at 0 50%);
+  
+  }
+  
+  
+  
+  .slider .slide.active{
+    clip-path: none;
+    transition: 10s;
+  }
+  
+
+  
+  .slider .slide .info{
+   
+    padding: 20px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+   
+  }
+  
+  .slider .slide .info h2{
+    font-size: 2em;
+    font-weight: 800;
+  }
+  
+  .navigation{
+    height: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    opacity: 1;
+  }
+  
+  .prev-btn, .next-btn{
+    z-index: 999;
+    font-size: 3rem;
+    color: rgb(249, 244, 244);
+    background: rgba(172, 171, 171, 0.8);
+    padding: 1rem;
+    cursor: pointer;
+  }
+  
+  .prev-btn{
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+  }
+  
+  .next-btn{
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+  }
+  .btn {
+    font-family: sans-serif;
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: 500;
+  }
+  .navigation-visibility{
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .navigation-visibility .slide-icon{
+    z-index: 999;
+    background: rgba(255, 255, 255, 0.5);
+    width: 20px;
+    height: 10px;
+    transform: translateY(-50px);
+    margin: 0 6px;
+    border-radius: 2px;
+    box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
+  }
+  
+  .navigation-visibility .slide-icon.active{
+    background: #4285F4;
+  }
+  
+  @media (max-width: 900px){
+    .slider{
+      width: 100%;
+    }
+  
+    .slider .slide .info{
+      position: relative;
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+
+  .slide {
+
+    display: flex;
+    justify-content: center;
+  }
+  
+  @media (max-width: 500px){
+    .slider .slide .info h2{
+      font-size: 1.8em;
+      line-height: 40px;
+    }
+  
+    .slider .slide .info p{
+      font-size: 0.9em;
+    }
+  }
+        
+
+
+
+
+
+
+
+/* input choices */
+
+
+  .notes{
+	padding: 20px;
+}
+
+.notes p{
+	border-bottom: thin dotted #d4d4d4;
+	padding: 20px 10px 0px 0px;
+	font-style: italic;
+	font-size: 18px;
+}
+
+.notes p span{
+	font-size: 16px;
+	float:  right;
+	cursor: pointer;
+	display: inline-block;
+}
+.notes p span.mark{
+	color: green;
+	font-size: 30px;
+	transform: translateY(-10px);
+}
+
+form{
+	width:  100%;
+}
+
+.field{
+	margin-bottom: 10px;
+	display: flex;
+	transition: opacity 0.3s;
+}
+
+.field input{
+	padding: 5px 10px;
+	width: 100%;
+	border: none;
+	 border: thin solid #d4d4d4; 
+	font-size: 20px;
+	color: #888;
+	font-family: ubuntu, sans-serif;
+	background-color: #f9f9f9;
+}
+.field input:focus{
+	outline: none;
+}
+
+.field span{
+	display: inline-block;
+	margin-left: 10px;
+	cursor: pointer;
+	background-color: #f9f9f9;
+	padding: 10px;
+	font-size: 20px;
+	transition: all 0.3s;
+	font-weight: bold;
+	border: thin solid #d4d4d4; 
+}
+.field span:last-child{
+	display: none;
+	padding: 12px;
+}
+.field span:hover{
+	background-color: green;
+	border: thin solid green;
+	color: #fff;
+}
+.field span:last-child:hover{
+	background-color: red;
+	border: thin solid red;
+	color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* test */
+
