--- a/styles/styles.css
+++ b/styles/styles.css
@@ -108,178 +108,12 @@ width: 10rem;
     text-align: center;
 }
 
-a {
-    
-}
 
-a:link { text-decoration: none;
+a:link { 
 display: flex;
 justify-content: center;
 align-content: center;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
-  
-  body{
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: lightblue;
-    
-  }
-  
-  
-  
-  .slider{
-    position: relative;
-    background: white;
-    width: 900px;
-    min-height: 500px;
-    margin: 20px;
-    overflow: hidden;
-    border-radius: 10px;
-    
-  }
-  
-  .slider .slide{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    clip-path: circle(0% at 0 50%);
-  
-  }
-  
-  
-  
-  .slider .slide.active{
-    clip-path: none;
-    transition: 10s;
-  }
-  
-
-  
-  .slider .slide .info{
-   
-    padding: 20px;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-   
-  }
-  
-  .slider .slide .info h2{
-    font-size: 2em;
-    font-weight: 800;
-  }
-  
-  .navigation{
-    height: 500px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    opacity: 1;
-  }
-  
-  .prev-btn, .next-btn{
-    z-index: 999;
-    font-size: 3rem;
-    color: rgb(249, 244, 244);
-    background: rgba(172, 171, 171, 0.8);
-    padding: 1rem;
-    cursor: pointer;
-  }
-  
-  .prev-btn{
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
-  }
-  
-  .next-btn{
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
-  }
-  .btn {
-    font-family: sans-serif;
-    font-size: 2rem;
-    font-style: normal;
-    font-weight: 500;
-  }
-  .navigation-visibility{
-    z-index: 999;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .navigation-visibility .slide-icon{
-    z-index: 999;
-    background: rgba(255, 255, 255, 0.5);
-    width: 20px;
-    height: 10px;
-    transform: translateY(-50px);
-    margin: 0 6px;
-    border-radius: 2px;
-    box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
-  }
-  
-  .navigation-visibility .slide-icon.active{
-    background: #4285F4;
-  }
-  
-  @media (max-width: 900px){
-    .slider{
-      width: 100%;
-    }
-  
-    .slider .slide .info{
-      position: relative;
-      width: 80%;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  }
-
-  .slide {
-
-    display: flex;
-    justify-content: center;
-  }
-  
-  @media (max-width: 500px){
-    .slider .slide .info h2{
-      font-size: 1.8em;
-      line-height: 40px;
-    }
-  
-    .slider .slide .info p{
-      font-size: 0.9em;
-    }
-  }
-        
-
-
-
 
 
 
