--- a/styles/styles.css
+++ b/styles/styles.css
@@ -547,7 +547,7 @@ form{
 
 }
 
-#cointitle {
+.individualtitle {
   font-weight: 800;
   font-size: 4rem;
   color: rgb(248, 94, 120);
@@ -683,6 +683,12 @@ font-weight: 600;
   position: fixed;
   z-index: 4;
 }
+
+
+
+
+
+
 
 
 @media screen and (max-width: 1250px) {
