--- a/styles/styles.css
+++ b/styles/styles.css
@@ -367,7 +367,7 @@ button.next{
   -moz-border-radius: 100%;
   -webkit-border-radius: 100%;
   border-radius: 100%;
-  background-color: white;
+  background-color: rgb(253, 223, 228);
   content: "";
   position: absolute;
   left: -12px;
@@ -379,7 +379,7 @@ button.next{
   -moz-border-radius: 100%;
   -webkit-border-radius: 100%;
   border-radius: 100%;
-  background-color: white;
+  background-color: rgb(253, 223, 228);
   content: "";
   position: absolute;
   left: -11px;
@@ -670,7 +670,7 @@ font-weight: 600;
 
 
 
-
+/*other*/
 
 
 
