--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,7 +6,7 @@
 
 body {
     
-    width: 50%;
+    width: 100%;
     margin: auto;
     text-align: center;
     background-color: rgb(251, 238, 240);
@@ -15,6 +15,7 @@ body {
 
 #subtitle {
   color: rgb(248, 119, 141);
+  font-weight: 800;
 }
 
 article {
@@ -32,9 +33,9 @@ h1 {
 
 h2 {
     font-family: 'Fira Sans Extra Condensed', sans-serif;
+    font-weight: 800;
     font-size: 2rem;
     text-align: center;
-    padding: 50px;
     color: rgb(247, 241, 242);
 
 }
@@ -48,7 +49,10 @@ h3 {
 }
 
 li {
+  margin-right: 40px;
   padding: 50px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 #flowerimage {
   
@@ -143,7 +147,7 @@ ul {
 li {
   background-color: rgb(245, 141, 159);
   border-radius: 25px;
-  margin: 30px;
+ 
 }
 /* input choices */
 
@@ -508,6 +512,10 @@ button.next{
 
 /* coin page */
 
+#coins {
+  margin-top: 25%;
+}
+
 .stats-container {
   background-color:rgb(253, 240, 240);
   width: 70%;
@@ -524,7 +532,6 @@ button.next{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 
 }
 
